# CZ4052-CloudComputing-Project

./: .gitignore  .terraform.lock.hcl  Dockerfile  README.md  app.py  main.tf  pyproject.toml  terraform.tfvars.json
.github/workflows/: google-cloudrun-docker.yml
.streamlit/: config.toml
app/: app.py  main.py
app/components/: sidebar.py
artifact-registry-tf/: main.tf
